# mcp-context-forge

./: .env.example  .gitignore  Containerfile  Containerfile.lite  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_ISSUE_3598.md  IMPROVEMENTS_SUMMARY.md  MANIFEST.in  Makefile  PERFORMANCE_CONCERNS_ANALYSIS.md  PR_UPDATE_COMMENT.md  PR_WRITEUP.md  PR_WRITEUP_SHORT.md  REVIEW_ANALYSIS_REPORT.md  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: lint.yml  playwright.yml
a2a-agents/go/a2a-echo-agent/: Dockerfile  go.mod  main.go
benchmarks/: __init__.py
benchmarks/contextforge/: Containerfile  __init__.py  __main__.py  docker-entrypoint.sh  render_benchmark_config.py  run-uvicorn.sh  runner.py  workload.py
benchmarks/contextforge/locust/: __init__.py  (+1 more)
infra/nginx/: nginx-performance.conf  nginx-tls.conf  nginx.conf
mcpgateway/: admin.py  config.py  db.py  llm_provider_configs.py  llm_schemas.py  main.py  schemas.py  version.py
mcpgateway/admin_ui/: a2aAgents.js  admin.js  app.js  appState.js  auth.js  bootstrap.js  configExport.js  constants.js  events.js  filters.js  formFieldHandlers.js  formHandlers.js  formSubmitHandlers.js  gateway.js  initialization.js  llmChat.js  llmModels.js  logging.js  metrics.js  modals.js  pagination.js  plugins.js  prompts.js  resources.js  search.js  security.js  selectiveImport.js  servers.js  tabs.js  tags.js  teams.js  tokens.js  tools.js  utils.js
mcpgateway/middleware/: http_auth_middleware.py.orig  token_scoping.py
mcpgateway/routers/: a2a_gateway.py  internal_llm_gateway_router.py  llm_admin_router.py  llm_proxy_router.py  oauth_router.py  teams.py
mcpgateway/services/: a2a_protocol.py  a2a_service.py  email_auth_service.py  gateway_service.py  llm_provider_service.py  llm_proxy_service.py  mcp_client_chat_service.py  mcp_session_pool.py  oauth_manager.py  prompt_service.py  resource_service.py  rust_a2a_runtime.py  rust_llm_gateway_proxy.py  server_service.py  sso_service.py  team_management_service.py  tool_service.py
mcpgateway/static/: admin.css  admin.js
mcpgateway/templates/: admin.html  agents_partial.html  gateways_partial.html  mcp_registry_partial.html  overview_partial.html  pagination_controls.html  prompts_partial.html  resources_partial.html  servers_partial.html  tokens_partial.html  tools_partial.html  tools_with_pagination.html  users_partial.html  version_info_partial.html
mcpgateway/transports/: rust_mcp_runtime_grpc_proxy.py  streamablehttp_transport.py
mcpgateway/utils/: dict_utils.py  internal_http.py
openshift/builds/: README.md  build-pipelines.yaml
openshift/operator/: Containerfile
operator/: Makefile  go.mod
tests/integration/: test_a2a_sdk_integration.py  test_benchmark_suite_runner.py  test_portkey_gateway_integration.py
tests/js/: admin-async.test.js  admin-edit-server-selection.test.js  admin-errors.test.js  admin-filters.test.js  admin-forms.test.js  admin-pagination.test.js  admin-plugin-filters.test.js  admin-search.test.js  admin-tabs.test.js  admin-view-public.test.js
tests/loadtest/: locustfile.py
tests/performance/: benchmark_suite.py  run_benchmark.py
tests/playwright/: conftest.py  test_admin_url_context.py  test_gateways.py  test_innerhtml_guard.py  test_mcp_registry_page.py  test_organization.py  test_rbac_permissions.py
tools_rust/a2a_runtime/: Cargo.toml
tools_rust/a2a_runtime/src/: config.rs  lib.rs
tools_rust/benchmark_console/: Cargo.toml
tools_rust/llm_gateway/: Cargo.toml
tools_rust/llm_gateway/src/: lib.rs  main.rs
tools_rust/mcp_runtime/: Cargo.toml  FOLLOWUPS.md  build.rs
tools_rust/mcp_runtime/proto/: mcp_runtime.proto
tools_rust/mcp_runtime/src/: config.rs  grpc.rs  lib.rs
tools_rust/mcp_runtime/tests/: runtime.rs
(+129 files in other folders)
