[package]
name = "contextforge_a2a_runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Mihai Criveti"]
description = "Experimental Rust A2A runtime sidecar for ContextForge"

[dependencies]
axum = "0.8.8"
clap = { version = "4.5.60", features = ["derive", "env"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "http2", "rustls-tls-native-roots"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.16"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full"] }
